# rag-knowledge-worker

./: .gitignore  README.md  answer.py  app.py  ingest.py  models.py  pyproject.toml  skills-lock.json
evaluation/: eval.py  test.py
