[project]
name = "rag-knowledge-worker"
version = "0.1.0"
description = "AI knowledge worker using RAG to become an expert on all company-related matters"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "gradio>=4.0",
    "litellm>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "tqdm>=4.0",
]

[project.scripts]
ingest = "ingest:main"
app = "app:main"
eval = "evaluation.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
